<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuAdicionar"
        android:title="@string/menu_adicionar"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuDisciplinas"
        android:title="@string/menu_disciplinas"
        android:icon="@android:drawable/ic_menu_agenda"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuConfiguracoes"
        android:title="@string/menu_configuracoes"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuSobre"
        android:title="@string/menu_sobre"
        app:showAsAction="never" />

</menu>