<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:padding="24dp"
    android:paddingTop="80dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configuracoes"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <RadioGroup
        android:id="@+id/radioGroupOrdenacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordenar_titulo" />

        <RadioButton
            android:id="@+id/radioDisciplina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordenar_disciplina" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonSalvarConfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/salvar" />

</LinearLayout>